Adaptive 1024px and 768px
Adaptive 1024px and 768px

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="maps_itm_text">NEW ARRIVALS <p class="text1">FOR KIDS</p></div>
             </div>
             <div class="maps_itm maps_big">
-                <img src="./img/Rectangle 20 (1).png" alt="" class="maps_itm_img">
+                <img src="./img/Rectangle 20 (1).png" alt="" class="maps_itm_img_big">
                 <div class="maps_itm_text"> LUXIROUS & TRENDY <p class="text1">ACCESORIES</p></div>
             </div>
         </div>
